--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,11 @@
             <version>8.0.25</version>
         </dependency>
 
-
-
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 </project>
