--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -46,7 +46,7 @@
         <url-pattern>/edit</url-pattern>
         <url-pattern>/edituser</url-pattern>
     </filter-mapping>
-
+<!--
     <filter>
         <filter-name>UserFilter</filter-name>
         <filter-class>Filter.UserFilter</filter-class>
@@ -57,7 +57,18 @@
         <url-pattern>/passingtest</url-pattern>
 
     </filter-mapping>
+-->
+    <filter>
+        <filter-name>BothFilter</filter-name>
+        <filter-class>Filter.BothFilter</filter-class>
+    </filter>
 
+    <filter-mapping>
+        <filter-name>BothFilter</filter-name>
+        <url-pattern>/home</url-pattern>
+        <url-pattern>/test</url-pattern>
+        <url-pattern>/results</url-pattern>
+    </filter-mapping>
 
     <!--============================================================
 	i18n support
