--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,9 +5,9 @@
           http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-<welcome-file-list>
-    <welcome-file>login</welcome-file>
-</welcome-file-list>
+    <welcome-file-list>
+        <welcome-file>login</welcome-file>
+    </welcome-file-list>
 
     <filter>
         <filter-name>EncodingFilter</filter-name>
@@ -31,8 +31,8 @@
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
-    
-    
+
+
     <filter>
         <filter-name>AdminFilter</filter-name>
         <filter-class>Filter.AdminFilter</filter-class>
@@ -89,5 +89,15 @@
         <param-name>locales</param-name>
         <param-value>ru en</param-value>
     </context-param>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/error_page_404.jsp</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/WEB-INF/jsp/error_page_500.jsp</location>
+    </error-page>
 
 </web-app>
